--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "dependencies": {
     "@hapi/boom": "^10.0.1",
     "@koa/cors": "^4.0.0",
+    "@parse/node-apn": "^5.1.3",
     "amala": "^8.0.2",
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
     "ethers": "^6.0.3",
+    "firebase": "^9.17.2",
+    "firebase-admin": "^11.5.0",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^12.0.0",
