--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src"
   },
   "dependencies": {
+    "@big-whale-labs/constants": "^0.1.74",
+    "@big-whale-labs/obss-storage-contract": "^0.1.3",
     "@hapi/boom": "^10.0.1",
     "@koa/cors": "^4.0.0",
     "@parse/node-apn": "^5.1.3",
     "amala": "^8.0.2",
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
-    "ethers": "^6.0.3",
+    "ethers": "^5.7.2",
     "firebase": "^9.17.2",
     "firebase-admin": "^11.5.0",
     "koa": "^2.14.1",
