--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,6 @@ PORT=1337
 APN_KEY_ID=XXXXXXXXXX
 APN_TEAM_ID=XXXXXXXXXX
 BUNDLE_ID=xxx.xxx.xxx
+ETH_RPC=https://rpc-mainnet.maticvigil.com/
+ETH_NETWORK=maticmum
+NODE_ENV=development
