--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@big-whale-labs/obss-storage-contract": "^0.1.3",
     "@hapi/boom": "^10.0.1",
     "@koa/cors": "^4.0.0",
+    "@notifee/react-native": "^7.6.1",
     "@parse/node-apn": "^5.1.3",
+    "@react-native-community/push-notification-ios": "^1.10.1",
     "amala": "^8.0.2",
+    "bs58": "^5.0.0",
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
     "ethers": "^5.7.2",
@@ -27,7 +30,8 @@
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^12.0.0",
-    "mongoose": "^6.9.1"
+    "mongoose": "^6.9.1",
+    "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
     "@typegoose/typegoose": "^10.1.1",
