--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "repository": "https://github.com/BigWhaleLabs/ketl-notifications-backend",
   "author": "backmeupplz <backmeupplz@gmail.com>",
   "license": "MIT",
+  "prettier": "@big-whale-labs/prettier-config",
   "scripts": {
     "distribute": "yarn build && node dist/server.js",
     "start": "tsc-watch --skipLibCheck --onSuccess 'node dist/server.js'",
     "build": "tsc --skipLibCheck",
     "pretty": "prettier --check src",
-    "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src"
+    "lint": "yarn pretty && eslint --max-warnings 0 ./src/"
   },
   "dependencies": {
     "@big-whale-labs/constants": "^0.1.74",
@@ -32,6 +33,9 @@
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
+    "@big-whale-labs/bwl-eslint-backend": "^1.0.1",
+    "@big-whale-labs/prettier-config": "^1.1.3",
+    "@rushstack/eslint-patch": "^1.2.0",
     "@typegoose/typegoose": "^10.1.1",
     "@types/koa": "^2.13.5",
     "@types/koa-bodyparser": "^4.3.10",
