--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@koa/cors": "^4.0.0",
     "@parse/node-apn": "^5.1.3",
     "amala": "^8.0.2",
+    "axios": "^1.3.6",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
