--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "@big-whale-labs/obss-storage-contract": "^0.1.3",
     "@hapi/boom": "^10.0.1",
     "@koa/cors": "^4.0.0",
-    "@parse/node-apn": "^5.1.3",
     "amala": "^8.0.2",
-    "axios": "^1.3.6",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
@@ -30,6 +28,7 @@
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^12.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.9.1",
     "unique-names-generator": "^4.7.1"
   },
@@ -42,6 +41,7 @@
     "@types/koa-bodyparser": "^4.3.10",
     "@types/koa-router": "^7.4.4",
     "@types/koa__cors": "^3.3.0",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.13.0",
     "eslint": "^8.34.0",
     "module-alias": "^2.2.2",
