--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
     "ethers": "^5.7.2",
-    "firebase-admin": "^11.5.0",
+    "firebase-admin": "11.4.0",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^12.0.0",
