--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hapi/boom": "^10.0.1",
     "@koa/cors": "^4.0.0",
     "amala": "^8.0.2",
+    "axios": "^1.4.0",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.3",
     "envalid": "^7.3.1",
