--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,4 @@ NODE_ENV=development
 OBSS_STORAGE_CONTRACT_FEEDS=0x0000000000000000000000000000000000000000
 OBSS_STORAGE_CONTRACT=0x0000000000000000000000000000000000000000
 KETL_ATTESTATION_CONTRACT=0x0000000000000000000000000000000000000000
+HEALTHCHECK_WEBHOOK=https://example.com
