--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "koa-router": "^12.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.9.1",
+    "node-persist": "^3.1.3",
     "unique-names-generator": "^4.7.1"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "@types/koa__cors": "^3.3.0",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.13.0",
+    "@types/node-persist": "^3.1.4",
     "eslint": "^8.34.0",
     "module-alias": "^2.2.2",
     "mongodb-memory-server": "^8.11.4",
