--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase-admin": "11.4.0",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.3.0",
+    "koa-ratelimit": "^5.0.1",
     "koa-router": "^12.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.9.1",
@@ -43,6 +44,7 @@
     "@typegoose/typegoose": "^10.1.1",
     "@types/koa": "^2.13.5",
     "@types/koa-bodyparser": "^4.3.10",
+    "@types/koa-ratelimit": "^5.0.2",
     "@types/koa-router": "^7.4.4",
     "@types/koa__cors": "^3.3.0",
     "@types/lodash": "^4.14.194",
