--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,4 @@ OBSS_STORAGE_CONTRACT_FEEDS=0x0000000000000000000000000000000000000000
 OBSS_STORAGE_CONTRACT=0x0000000000000000000000000000000000000000
 KETL_ATTESTATION_CONTRACT=0x0000000000000000000000000000000000000000
 HEALTHCHECK_WEBHOOK=https://example.com
+KETL_VIEWS_BACKEND=https://example.com
