--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,4 @@ OBSS_STORAGE_CONTRACT=0x0000000000000000000000000000000000000000
 KETL_ATTESTATION_CONTRACT=0x0000000000000000000000000000000000000000
 HEALTHCHECK_WEBHOOK=https://example.com
 KETL_VIEWS_BACKEND=https://example.com
+PASSWORD=XXXXXXXXXX
