add mixpanel event

--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,4 @@ KETL_ATTESTATION_CONTRACT=0x0000000000000000000000000000000000000000
 HEALTHCHECK_WEBHOOK=https://example.com
 KETL_VIEWS_BACKEND=https://example.com
 PASSWORD=XXXXXXXXXX
+MIXPANEL_PROJECT_TOKEN=00000000000000000000000000000000
