--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "koa-ratelimit": "^5.0.1",
     "koa-router": "^12.0.0",
     "lodash": "^4.17.21",
+    "mixpanel": "^0.18.0",
     "mongoose": "^6.9.1",
     "node-persist": "^3.1.3",
     "unique-names-generator": "^4.7.1"
